tests/valid_input/auto/ok09.java
class Main {
    static String str = "\t\\\n\012\\\111";
    static void run(){
        ifj16.print(str);
    }
}
