tests/invalid_sem/def/def07.java
class Main {
    static int c = 5;
    static void run() {
        Hello.hello();
    }
}

class Hello {
    static void hello() {
        int b = c;
    }
}
